@@ -1,7 +1,7 @@
 /* syslog.cc
 
    Copyright 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
-   2006, 2007, 2009, 2011 Red Hat, Inc.
+   2006, 2007, 2009, 2011, 2012 Red Hat, Inc.
 
 This file is part of Cygwin.
 
